2010-05-31  Sebastien Pouliot  <sebastien@ximian.com>

	* CaptureDeviceConfiguration.cs: API fix (which removes the FIXME
	too ;-)

2010-05-31  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* VideoFormat.cs: Add back SL4 beta API so that the drts build.

2010-05-29  Chris Toshok  <toshok@ximian.com>

	* CaptureImageCompletedEventArgs.cs: we need to create the
	WriteableBitmap here instead of passing it from unmanaged, or else
	the managed pixels array won't be created properly.

2010-05-28  Chris Toshok  <toshok@ximian.com>

	* VideoFormat.cs: correct field names and order (and number) of
	arguments to ctor.

2010-05-27  Chris Toshok  <toshok@ximian.com>

	* CaptureSource.cs: add CaptureImageAsync call.

2010-05-26  Chris Toshok  <toshok@ximian.com>

	* VideoSink.cs: implement this by just hooking up to events on the
	CaptureSource which turn around and call the abstract methods.

	* VideoBrush.cs: implement SetSource (CaptureSource).

	* SampleReadyEventArgs.cs, VideoFormatChangedEventArgs.cs: event
	args we use to communicate from CaptureSource to VideoSink.

	* CaptureSource.cs: implement.

	* CaptureDeviceConfiguration.cs: add implementation of
	GetAvailableVideoCaptureDevices and
	GetAvailableAudioCaptureDevices.

2010-03-05  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* AcquireLicenseCompletedEventArgs.cs:
	* AudioCaptureDevice.cs:
	* AudioCaptureDeviceCollection.cs:
	* AudioFormat.cs:
	* AudioSink.cs:
	* CaptureDevice.cs:
	* CaptureDeviceConfiguration.cs:
	* CaptureSource.cs:
	* CaptureState.cs:
	* CompositeTransform.cs:
	* ContentKeyType.cs:
	* DomainAcquirer.cs:
	* DomainOperationCompletedEventArgs.cs:
	* ImplicitInputBrush.cs:
	* LicenseManagement.cs:
	* MediaLicense.cs:
	* PixelFormatType.cs:
	* VideoCaptureDevice.cs:
	* VideoCaptureDeviceCollection.cs:
	* VideoFormat.cs:
	* VideoSink.cs:
	* WaveFormatType.cs:
	* Transform.cs:
	* VideoBrush.cs:
	* SkewTransform.cs:
	* TransformGroup.cs:
	* ScaleTransform.cs:
	* LicenseAcquirer.cs:
	* RotateTransform.cs: