@@ -36,22 +36,13 @@ namespace System.Windows.Media {
 
 		}
 		
-#if NET_2_1
-		override
-#else
-		new
-#endif
-		public bool CanConvertFrom (ITypeDescriptorContext context, Type sourceType)
+		public override bool CanConvertFrom (ITypeDescriptorContext context, Type sourceType)
 		{
 			return sourceType == typeof (string) || sourceType == typeof (Uri);
 		}
 		
-#if NET_2_1
-		override
-#else
-		new
-#endif
-		public object ConvertFrom (ITypeDescriptorContext context, CultureInfo culture, object value)
+
+		public override object ConvertFrom (ITypeDescriptorContext context, CultureInfo culture, object value)
 		{
 			if (value is string) {
 				return new BitmapImage {
